--- a/src/TradingChat.WebApp/appsettings.json
+++ b/src/TradingChat.WebApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TradingChatDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TradingChat.WebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
