--- a/src/TradingChat.WebApp/appsettings.Development.json
+++ b/src/TradingChat.WebApp/appsettings.Development.json
@@ -2,10 +2,29 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost; Port=5432; Database=TradingChatDB; User ID=postgres; Password=senhaS3creta;"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341/"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithProcessId",
+      "WithThreadId"
+    ]
   }
 }
