--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
         - 5432:5432
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+        - /postgres-trading-chat:/var/lib/postgresql/data
     networks:
         - trading-chat-net
     environment:
@@ -22,7 +22,7 @@ services:
     ports: 
         - 5341:80
     volumes:
-      - seq-data:/data
+      - /var/log/seq-trading-chat:/data
     networks:
         - trading-chat-net
     environment:
@@ -34,12 +34,12 @@ services:
       hostname: localhost
       ports:
           - 5672:5672
-          - 15672:15672
+          - 15672:1567
+      networks:
+          - trading-chat-net
+      volumes:
+          - /rabbitmq-trading-chat:/var/lib/rabbitmq
 
 networks:
   trading-chat-net:
     driver: bridge
-
-volumes:
-  seq-data:
-  postgres-data:
