feat: create a usecase for create chat user

--- a/src/TradingChat.WebApp/TradingChat.WebApp.csproj
+++ b/src/TradingChat.WebApp/TradingChat.WebApp.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TradingChat.Domain\TradingChat.Domain.csproj" />
     <ProjectReference Include="..\TradingChat.Infrastructure\TradingChat.Infrastructure.csproj" />
   </ItemGroup>
 
