--- a/src/TradingChat.Infrastructure/TradingChat.Infrastructure.csproj
+++ b/src/TradingChat.Infrastructure/TradingChat.Infrastructure.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TradingChat.Domain\TradingChat.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
