--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
         - 5432:5432
     volumes:
-        - /postgres-trading-chat:/var/lib/postgresql/data
+        - postgres-data:/var/lib/postgresql/data
     networks:
         - trading-chat-net
     environment:
@@ -22,7 +22,7 @@ services:
     ports: 
         - 5341:80
     volumes:
-      - /var/log/seq-trading-chat:/data
+      - seq-data:/data
     networks:
         - trading-chat-net
     environment:
@@ -38,8 +38,13 @@ services:
       networks:
           - trading-chat-net
       volumes:
-          - /rabbitmq-trading-chat:/var/lib/rabbitmq
+          - rabbitmq-data:/var/lib/rabbitmq
 
 networks:
   trading-chat-net:
     driver: bridge
+
+volumes:
+  seq-data:
+  postgres-data:
+  rabbitmq-data:
