--- a/src/TradingChat.WebApp/appsettings.Development.json
+++ b/src/TradingChat.WebApp/appsettings.Development.json
@@ -2,6 +2,16 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost; Port=5432; Database=TradingChatDB; User ID=postgres; Password=senhaS3creta;"
   },
+  "RabbitMqSettings": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "ConnectRetry": {
+      "Count": 3,
+      "DurationInSeconds": 2
+    }
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
