refactor: remove the GetStockPriceComand from application

--- a/src/TradingChat.Application/TradingChat.Application.csproj
+++ b/src/TradingChat.Application/TradingChat.Application.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TradingChat.Core\TradingChat.Core.csproj" />
     <ProjectReference Include="..\TradingChat.Domain\TradingChat.Domain.csproj" />
   </ItemGroup>
 
