chore: rabbit injection and namespace clean

--- a/src/TradingChat.WebApp/appsettings.Development.json
+++ b/src/TradingChat.WebApp/appsettings.Development.json
@@ -7,7 +7,7 @@
     "Port": 5672,
     "UserName": "guest",
     "Password": "guest",
-    "ConnectRetry": {
+    "RetrySettings": {
       "Count": 3,
       "DurationInSeconds": 2
     }
