chore: admin user config in appSettings

--- a/src/TradingChat.WebApp/appsettings.Development.json
+++ b/src/TradingChat.WebApp/appsettings.Development.json
@@ -12,6 +12,10 @@
       "DurationInSeconds": 2
     }
   },
+  "AdminUser": {
+    "Email": "admin@email.com",
+    "Password": "123456"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
