--- a/src/TradingChat.Domain/TradingChat.Domain.csproj
+++ b/src/TradingChat.Domain/TradingChat.Domain.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TradingChat.Core\TradingChat.Core.csproj" />
+  </ItemGroup>
+
 </Project>
