refactor: change admin user to bot user

--- a/src/TradingChat.WebApp/appsettings.Development.json
+++ b/src/TradingChat.WebApp/appsettings.Development.json
@@ -12,8 +12,8 @@
       "DurationInSeconds": 2
     }
   },
-  "AdminUser": {
-    "Email": "admin@email.com",
+  "BotUser": {
+    "Email": "bot@email.com",
     "Password": "123456"
   },
   "Serilog": {
