--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,51 +2,40 @@ version: '3.8'
 
 services:
   
-  postgres:
-    container_name: trading-chat-postgres
-    image: postgres:latest
-    hostname: localhost
+  api:
+    container_name: trading-chat-api
+    image: trading-chat-api:latest
+    build:
+      context: ../.
+      dockerfile: ./src/TradingChat.WebApp/Dockerfile
     ports:
-        - 5432:5432
-    volumes:
-        - postgres-data:/var/lib/postgresql/data
+        - 5010:80
     networks:
         - trading-chat-net
     environment:
-        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        - ASPNETCORE_ENVIRONMENT=Internal
+    depends_on:
+      - postgres
+      - seq
+      - rabbitmq
 
-  seq:
-    container_name: trading-chat-seq
-    image: datalust/seq:latest
-    hostname: localhost
-    ports: 
-        - 5341:80
-    volumes:
-      - seq-data:/data
+  chatbot:
+    container_name: trading-chat-bot
+    image: trading-chat-bot:latest
+    build:
+      context: ../.
+      dockerfile: ./src/TradingChat.ChatBot/Dockerfile
+    ports:
+        - 5020:80
     networks:
         - trading-chat-net
     environment:
-        - ACCEPT_EULA=Y
-
-  rabbitmq:
-      container_name: trading-chat-rabbitmq
-      image: rabbitmq:3.11.10-management
-      hostname: localhost
-      ports:
-          - 5672:5672
-          - 15672:15672
-      networks:
-          - trading-chat-net
-      volumes:
-        - rabbitmq-data:/var/lib/rabbitmq/
-        - rabbitmq-log:/var/log/rabbitmq
+        - ASPNETCORE_ENVIRONMENT=Internal
+    depends_on:
+      - postgres
+      - seq
+      - rabbitmq
 
 networks:
   trading-chat-net:
-    driver: bridge
-
-volumes:
-  seq-data:
-  postgres-data:
-  rabbitmq-data:
-  rabbitmq-log:
+    name: docker-compose.env/trading-chat-net
