feat: add appsettings.Internal and fixes docker-compose

--- a/src/TradingChat.ChatBot/Properties/launchSettings.json
+++ b/src/TradingChat.ChatBot/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "TradingChat.ChatCommandBot": {
       "commandName": "Project",
       "environmentVariables": {
-        "DOTNET_ENVIRONMENT": "Development"
+        "DOTNET_ENVIRONMENT": "Internal"
       },
       "dotnetRunMessages": true
     } 
