--- a/src/TradingChat.ChatBot/appsettings.Internal.json
+++ b/src/TradingChat.ChatBot/appsettings.Internal.json
@@ -11,12 +11,31 @@
   },
   "Stooq": {
     "Endpoint": "https://stooq.com/q/l/?s=aapl.us&f=sd2t2ohlcv&h&e=csv",
-    "StockField" : "aapl.us"
+    "StockField": "aapl.us"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://seq"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithProcessId",
+      "WithThreadId"
+    ]
   }
 }
