--- a/src/TradingChat.ChatBot.Commands/TradingChat.ChatBot.Commands.csproj
+++ b/src/TradingChat.ChatBot.Commands/TradingChat.ChatBot.Commands.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <PackageReference Include="CsvHelper" Version="31.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TradingChat.Core\TradingChat.Core.csproj" />
   </ItemGroup>
 
