--- a/src/TradingChat.ChatBot/TradingChat.ChatBot.csproj
+++ b/src/TradingChat.ChatBot/TradingChat.ChatBot.csproj
@@ -10,20 +10,24 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
 		<PackageReference Include="Serilog" Version="2.12.0" />
 		<PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
 		<PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
 		<PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
 		<PackageReference Include="Serilog.Sinks.Seq" Version="5.2.2" />
+        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.7.0" />
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.7.0" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.7.1" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta.7" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.7.1" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\TradingChat.ChatBot.Commands\TradingChat.ChatBot.Commands.csproj" />
-		<ProjectReference Include="..\TradingChat.ChatBot.External.Stooq\TradingChat.ChatBot.External.Stooq.csproj" />
 		<ProjectReference Include="..\TradingChat.Core.Rabbit\TradingChat.Core.Rabbit.csproj" />
 		<ProjectReference Include="..\TradingChat.Core\TradingChat.Core.csproj" />
 	</ItemGroup>
