add tracing with seq

--- a/src/TradingChat.ChatBot/appsettings.Development.json
+++ b/src/TradingChat.ChatBot/appsettings.Development.json
@@ -37,5 +37,8 @@
       "WithProcessId",
       "WithThreadId"
     ]
+  },
+  "OpenTelemetry":{
+    "Endpoint": "http://localhost:5341/ingest/otlp/v1/traces"
   }
 }
