--- a/src/TradingChat.WebApp/appsettings.Development.json
+++ b/src/TradingChat.WebApp/appsettings.Development.json
@@ -15,7 +15,7 @@
   "BotUser": {
     "Email": "bot@email.com",
     "Password": "123456"
-  },
+ },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -40,5 +40,8 @@
       "WithProcessId",
       "WithThreadId"
     ]
+  },
+  "OpenTelemetry":{
+    "Endpoint": "http://localhost:5341/ingest/otlp/v1/traces"
   }
 }
