--- a/src/TradingChat.WebApp/appsettings.Internal.json
+++ b/src/TradingChat.WebApp/appsettings.Internal.json
@@ -40,5 +40,8 @@
 			"WithProcessId",
 			"WithThreadId"
 		]
-	}
+	},
+  "OpenTelemetry":{
+    "Endpoint": "http://seq/ingest/otlp/v1/traces"
+  }
 }
