--- a/src/TradingChat.ChatBot/appsettings.Internal.json
+++ b/src/TradingChat.ChatBot/appsettings.Internal.json
@@ -37,5 +37,8 @@
       "WithProcessId",
       "WithThreadId"
     ]
+  },
+  "OpenTelemetry":{
+    "Endpoint": "http://seq/ingest/otlp/v1/traces"
   }
 }
