--- a/src/TradingChat.WebApp/Dockerfile
+++ b/src/TradingChat.WebApp/Dockerfile
@@ -1,11 +1,13 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+ENV DOTNET_NUGET_SIGNATURE_VERIFICATION=false
+
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY ["src/TradingChat.WebApp/TradingChat.WebApp.csproj", "src/TradingChat.WebApp/"]
 COPY ["src/TradingChat.Domain/TradingChat.Domain.csproj", "src/TradingChat.Domain/"]
@@ -13,7 +15,8 @@ COPY ["src/TradingChat.Core/TradingChat.Core.csproj", "src/TradingChat.Core/"]
 COPY ["src/TradingChat.Infrastructure/TradingChat.Infrastructure.csproj", "src/TradingChat.Infrastructure/"]
 COPY ["src/TradingChat.Application/TradingChat.Application.csproj", "src/TradingChat.Application/"]
 COPY ["src/TradingChat.Core.Rabbit/TradingChat.Core.Rabbit.csproj", "src/TradingChat.Core.Rabbit/"]
-RUN dotnet restore "src/TradingChat.WebApp/TradingChat.WebApp.csproj"
+RUN dotnet restore "src/TradingChat.WebApp/TradingChat.WebApp.csproj" --verbosity detailed 
+
 COPY . .
 WORKDIR "/src/src/TradingChat.WebApp"
 RUN dotnet build "TradingChat.WebApp.csproj" -c Release -o /app/build
