replace seq with grafana loki

--- a/docker/docker-compose.env.yml
+++ b/docker/docker-compose.env.yml
@@ -15,19 +15,6 @@ services:
     environment:
         - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
 
-  seq:
-    container_name: trading-chat-seq
-    image: datalust/seq:latest
-    hostname: localhost
-    ports: 
-        - 5341:80
-    volumes:
-      - seq-data:/data
-    networks:
-        - trading-chat-net
-    environment:
-        - ACCEPT_EULA=Y
-
   rabbitmq:
       container_name: trading-chat-rabbitmq
       image: rabbitmq:3.11.10-management
@@ -40,6 +27,44 @@ services:
       volumes:
         - rabbitmq-data:/var/lib/rabbitmq/
         - rabbitmq-log:/var/log/rabbitmq
+
+  loki:
+    image: grafana/loki:2.9.4
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    networks:
+        - trading-chat-net
+
+  grafana:
+    environment:
+      - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+    entrypoint:
+      - sh
+      - -euc
+      - |
+        mkdir -p /etc/grafana/provisioning/datasources
+        cat <<EOF > /etc/grafana/provisioning/datasources/ds.yaml
+        apiVersion: 1
+        datasources:
+        - name: Loki
+          type: loki
+          access: proxy
+          orgId: 1
+          url: http://loki:3100
+          basicAuth: false
+          isDefault: true
+          version: 1
+          editable: false
+        EOF
+        /run.sh
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
+    networks:
+      - trading-chat-net
 
 networks:
   trading-chat-net:
