--- a/src/TradingChat.ChatBot/appsettings.Internal.json
+++ b/src/TradingChat.ChatBot/appsettings.Internal.json
@@ -1,44 +1,48 @@
 {
-  "RabbitMqSettings": {
-    "HostName": "rabbitmq",
-    "Port": 5672,
-    "UserName": "guest",
-    "Password": "guest",
-    "RetrySettings": {
-      "Count": 3,
-      "DurationInSeconds": 2
-    }
-  },
-  "Stooq": {
-    "Endpoint": "https://stooq.com/q/l/?s=aapl.us&f=sd2t2ohlcv&h&e=csv",
-    "StockField": "aapl.us"
-  },
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
-    },
-    "WriteTo": [
-      {
-        "Name": "Console"
-      },
-      {
-        "Name": "Seq",
-        "Args": {
-          "serverUrl": "http://seq"
+    "RabbitMqSettings": {
+        "HostName": "rabbitmq",
+        "Port": 5672,
+        "UserName": "guest",
+        "Password": "guest",
+        "RetrySettings": {
+            "Count": 3,
+            "DurationInSeconds": 2
         }
-      }
-    ],
-    "Enrich": [
-      "FromLogContext",
-      "WithProcessId",
-      "WithThreadId"
-    ]
-  },
-  "OpenTelemetry":{
-    "Endpoint": "http://seq/ingest/otlp/v1/traces"
-  }
+    },
+    "Stooq": {
+        "Endpoint": "https://stooq.com/q/l/?s=aapl.us&f=sd2t2ohlcv&h&e=csv",
+        "StockField": "aapl.us"
+    },
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "Console"
+            },
+            {
+                "Name": "GrafanaLoki",
+                "Args": {
+                    "uri": "http://loki:3100",
+                    "propertiesAsLabels": [
+                        "app",
+                        "env"
+                    ]
+                }
+            }
+        ],
+        "Enrich": [
+            "FromLogContext",
+            "WithProcessId",
+            "WithThreadId"
+        ]
+    },
+    "OpenTelemetry":{
+        "Endpoint": "http://seq/ingest/otlp/v1/traces"
+    }
 }
