--- a/src/TradingChat.ChatBot/appsettings.Development.json
+++ b/src/TradingChat.ChatBot/appsettings.Development.json
@@ -26,9 +26,13 @@
         "Name": "Console"
       },
       {
-        "Name": "Seq",
+        "Name": "GrafanaLoki",
         "Args": {
-          "serverUrl": "http://localhost:5341/"
+          "uri": "http://localhost:3100",
+          "propertiesAsLabels": [
+            "app",
+            "env"
+          ]
         }
       }
     ],
