--- a/src/TradingChat.WebApp/appsettings.Internal.json
+++ b/src/TradingChat.WebApp/appsettings.Internal.json
@@ -1,47 +1,51 @@
 {
-	"ConnectionStrings": {
-		"DefaultConnection": "Host=postgres; Port=5432; Database=TradingChatDB; User ID=postgres; Password=senhaS3creta;"
-	},
-	"RabbitMqSettings": {
-		"HostName": "rabbitmq",
-		"Port": 5672,
-		"UserName": "guest",
-		"Password": "guest",
-		"RetrySettings": {
-			"Count": 3,
-			"DurationInSeconds": 2
-		}
-	},
-	"BotUser": {
-		"Email": "bot@email.com",
-		"Password": "123456"
-	},
-	"Serilog": {
-		"MinimumLevel": {
-			"Default": "Information",
-			"Override": {
-				"Microsoft": "Warning",
-				"System": "Warning"
-			}
-		},
-		"WriteTo": [
-			{
-				"Name": "Console"
-			},
-			{
-				"Name": "Seq",
-				"Args": {
-					"serverUrl": "http://seq"
-				}
-			}
-		],
-		"Enrich": [
-			"FromLogContext",
-			"WithProcessId",
-			"WithThreadId"
-		]
-	},
-  "OpenTelemetry":{
-    "Endpoint": "http://seq/ingest/otlp/v1/traces"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=postgres; Port=5432; Database=TradingChatDB; User ID=postgres; Password=senhaS3creta;"
+    },
+    "RabbitMqSettings": {
+        "HostName": "rabbitmq",
+        "Port": 5672,
+        "UserName": "guest",
+        "Password": "guest",
+        "RetrySettings": {
+            "Count": 3,
+            "DurationInSeconds": 2
+        }
+    },
+    "BotUser": {
+        "Email": "bot@email.com",
+        "Password": "123456"
+    },
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "Console"
+            },
+            {
+                "Name": "GrafanaLoki",
+                "Args": {
+                    "uri": "http://loki:3100",
+                    "propertiesAsLabels": [
+                        "app",
+                        "env"
+                    ]
+                }
+            }
+        ],
+        "Enrich": [
+            "FromLogContext",
+            "WithProcessId",
+            "WithThreadId"
+        ]
+    },
+    "OpenTelemetry":{
+        "Endpoint": "http://seq/ingest/otlp/v1/traces"
+    }
 }
