add tracing with grafana tempo and otel

--- a/src/TradingChat.ChatBot/appsettings.Internal.json
+++ b/src/TradingChat.ChatBot/appsettings.Internal.json
@@ -43,6 +43,6 @@
         ]
     },
     "OpenTelemetry":{
-        "Endpoint": "http://seq/ingest/otlp/v1/traces"
+        "Endpoint": "http://otel-collector:4317"
     }
 }
