--- a/src/TradingChat.WebApp/appsettings.Internal.json
+++ b/src/TradingChat.WebApp/appsettings.Internal.json
@@ -46,6 +46,6 @@
         ]
     },
     "OpenTelemetry":{
-        "Endpoint": "http://seq/ingest/otlp/v1/traces"
+        "Endpoint": "http://otel-collector:4317"
     }
 }
