add custom telemetry for rabbit and send message handler

--- a/docker/grafana-datasources.yaml
+++ b/docker/grafana-datasources.yaml
@@ -15,7 +15,7 @@ datasources:
       - datasourceUid: tempo
         matcherRegex: \"TraceId\":\"(\w+)\"
         name: TraceId
-        url: ${__value.raw}
+        url: $${__value.raw}
 
   - name: tempo
     type: tempo
