--- a/docker/docker-compose.env.yml
+++ b/docker/docker-compose.env.yml
@@ -29,13 +29,14 @@ services:
         - rabbitmq-log:/var/log/rabbitmq
 
   grafana:
+    image: grafana/grafana:latest
     environment:
       - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
     volumes:
       - ./grafana-datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
-    image: grafana/grafana:latest
+      - grafana_data:/var/lib/grafana
     ports:
       - "3000:3000"
     networks:
@@ -81,3 +82,4 @@ volumes:
   postgres-data:
   rabbitmq-data:
   rabbitmq-log:
+  grafana_data:
