--- a/src/TradingChat.Core.Rabbit/TradingChat.Core.Rabbit.csproj
+++ b/src/TradingChat.Core.Rabbit/TradingChat.Core.Rabbit.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="OpenTelemetry" Version="1.7.0" />
     <PackageReference Include="Polly" Version="8.3.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
